--- a/css/parts.css
+++ b/css/parts.css
@@ -28,6 +28,13 @@
   text-align: center;
 }
 
+@media (max-width: 690px) {
+  .contact-form .modal {
+    width: 80%;
+    padding: 25px 15px;
+  }
+}
+
 .contact-form .modal .close-space {
   position: absolute;
   top: 10px;
